--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,41 @@
-cachetools==5.0.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.1.2
-colorama==0.4.4
+blinker==1.8.1
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 earthengine-api==0.1.305
-Flask==2.1.1
-future==0.18.2
-ghhops-server==1.5.2
-google-api-core==2.7.1
+Flask==3.0.3
+future==1.0.0
+ghhops_server==1.5.5
+google-api-core==2.18.0
 google-api-python-client==1.12.11
-google-auth==2.6.3
-google-auth-httplib2==0.1.0
-google-cloud-core==2.2.3
-google-cloud-storage==2.2.1
-google-crc32c==1.3.0
-google-resumable-media==2.3.2
-googleapis-common-protos==1.56.0
-httplib2==0.20.4
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.16.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
+httplib2==0.22.0
 httplib2shim==0.0.3
-idna==3.3
-importlib-metadata==4.11.3
-itsdangerous==2.1.2
-Jinja2==3.1.1
-MarkupSafe==2.1.1
+idna==3.7
+importlib_metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 numpy==1.22.3
-protobuf==3.20.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==3.0.7
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pyparsing==3.1.2
 pyproj==3.3.0
-requests==2.27.1
-rhino3dm==7.15.0
-rsa==4.8
+requests==2.31.0
+rhino3dm==8.6.0
+rsa==4.9
 six==1.16.0
 uritemplate==3.0.1
-urllib3==1.26.9
-Werkzeug==2.1.1
-zipp==3.8.0
+urllib3==2.2.1
+Werkzeug==3.0.2
+zipp==3.18.1
